--- a/admin-template/public/css/diy.css
+++ b/admin-template/public/css/diy.css
@@ -3,70 +3,38 @@ html, body, #app, .page, .sign_in,
 html, body, #app, .page, .sign_in .warp,
 html, body, #app, .page, .sign_in .warp .el-row,
 html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24,
-html, body, #app, .page {
+html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
   height: 100%;
-  --bg1: #fff;
-  --bg2: #9fe080;
-  --textColor1: #12c294;
-}
-::-webkit-scrollbar-thumb{
-  background-color: rgba(144,147,153,.3) !important;
-}
-::-webkit-scrollbar-thumb:hover{
-  background-color: rgba(144,147,153,.5) !important;
-}
-#app{ 
-	background-color: #f2f7fa;
 }
 .form .el-input,
 .form .el-select {
   width: 100% !important;
 }
-.page{
-  /* background-color: #12c294; */
-}
-.page main {
-  display: flex;
-  flex-direction: column;
-  /* margin: 15px; */
-  margin-left: 0;
-  /* border-radius: 15px; */
-  background-color: #fff;
-}
-.page main .action_left .breadcrumb_box .el-breadcrumb__item span.el-breadcrumb__inner {
-  color: #fff !important;
-}
-.el-main{
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
+
 /* 登录 */
 .sign_in {
   padding: 0 !important;
 }
 .sign_in h1 {
   font-size: 22px;
-  color: #fff;
+  color: #234d52;
   padding-bottom: 10px;
-  position: absolute;
-  width: 200px;
-  left: 75px;
-  top: 50%;
-  transform: translateY(-50%);
 }
 .sign_in .form {
-  padding: 40px !important;
-  background: #fffdfd;
-  margin-top: auto !important;
-}
-.sign_in .form label.el-form-item__label{
-  color: #12c294 !important;
-}
-.register_wrap .form {
-  max-height: 55vh;
-  overflow: scroll !important;
+  padding: 15% 20px 20px !important;
+  background-color: rgba(255, 255, 255, .3);
+  margin-top: 0 !important;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  overflow: unset !important;
+  margin: 0 !important;
   border-radius: 0 !important;
+}
+
+.register_wrap .form {
+  padding-top: 100px !important;
 }
 
 .sign_in .form .el-input__inner {
@@ -89,23 +57,19 @@ html, body, #app, .page {
   text-align: center;
 }
 .sign_in .form .btns .el-button {
-  width: 100% !important;
-  margin: 0 0 10px 0 !important;  
+  width: 80px !important;
+  float: none;
+}
+.sign_in .form .btns .lg_login {
+  margin-left: 90px;
 }
 .sign_in .form .btns .lg_forgot {
-  outline: none !important;
   background: none !important;
   border: none !important;
-  color: #12c294 !important;
-  text-decoration: underline;
+  color: #fff;
   /* display: block; */
   padding: 0;
   text-shadow: 0 1px 1px hsla(240, 0%, 100%, .5);
-}
-.forgot_wrap .form h1 {
-  position: static !important;
-  color: #70a9df;
-  margin: 0 auto;
 }
 
 /* 验证码 */
@@ -113,10 +77,8 @@ html, body, #app, .page {
   width: 100% !important;
 }
 .geetest_box .geetest_box_title {
-  margin-right: 12px !important;
-  flex-shrink: 0;
   line-height: 40px;
-  color: #12c294;
+  color: #fff;
   text-shadow: 0 1px 1px hsla(240, 0%, 100%, .5);
 }
 .geetest_box_content .el-input {
@@ -133,6 +95,7 @@ html, body, #app, .page {
 .face-login {
   position: absolute;
   top: 0;
+  right: 521px;
   background: #fff;
   padding: 10px 0px;
   text-align: center;
@@ -176,13 +139,13 @@ html, body, #app, .page {
 }
 .sign_in .form .rs_register {
   margin-left: 15px;
-  margin-right: 30px;
+  margin-right: 150px;
 }
 
 /* header */
 header {
-  /* background: #479d6b !important; */
-  color: var(--textColor1) !important;
+  background: #479d6b !important;
+  color: #fbfbfb !important;
 }
 
 header .action_center {
@@ -204,11 +167,11 @@ header .el-dropdown-link span:first-child {
   height: 40px;
 }
 header .el-dropdown-link span:first-child img {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
 }
 header .el-dropdown-link span:last-child {
-  color: var(--textColor1);
+  color: #fbfbfb;
   position: relative;
   margin: 0 !important;
   top: 0 !important;
@@ -223,8 +186,8 @@ header .el-dropdown-link span:last-child::after {
   align-items: center;
   justify-content: center;
   position: absolute;
-  border-top: 2px solid #fff;
-  border-right: 2px solid #fff;
+  border-top: 2px solid #fbfbfb;
+  border-right: 2px solid #fbfbfb;
   transform: rotate(135deg);
   transition: all 0.5s ease 0s;
   right: -10px;
@@ -235,7 +198,7 @@ header .el-dropdown-link:hover span:last-child::after {
   top: 8px;
 }
 header .el-dropdown-link .el-avatar {
-  /* display: none !important; */
+  display: none !important;
 }
 
 /* 面包屑 */
@@ -246,14 +209,14 @@ header .el-dropdown-link .el-avatar {
   color: #FFF !important;
 }
 .el-breadcrumb__item:last-child .el-breadcrumb__inner span {
-  color: var(--textColor1) !important;
+  color: #fbfbfb !important;
 }
 
 /* side 菜单 */
 .side {
-  border-right: none !important;
+  background: #479d6b !important;
 }
-/* .side::before {
+.side::before {
   content: "";
   display: block;
   width: 100px;
@@ -264,26 +227,32 @@ header .el-dropdown-link .el-avatar {
   background-size: cover;
   box-shadow: 0 0 5px rgba(0, 0, 0, .5);
   border: 4px solid #479d6b;
-} */
+}
 .side li.el-submenu,
 .side li.is-active,
 .side > .el-menu-item,
 .side li.el-submenu .el-submenu__title {
-  background-color: var(--textColor1) !important;
-  /* color: #304156 !important; */
+  background-color: #fbfbfb !important;
+  color: #304156 !important;
 }
 .side li.el-submenu li.el-menu-item {
   background-color: #f5f5f5 !important;
-  /* color: #1f2d3d !important; */
+  color: #1f2d3d !important;
 }
 
 .side li.is-active,
+.side li.el-submenu li.el-menu-item.active,
 .side li.el-submenu li.el-menu-item.is-active {
-  /* color: #479d6b !important; */
+  color: #479d6b !important;
+}
+
+.side li.el-submenu li.el-menu-item.sactive {
+  color: #304156 !important;
+  background: #fbfbfb !important;
 }
 
 .side li.is-opened .el-submenu__title {
-  /* background-color: #479d6b !important; */
+  background-color: #479d6b !important;
   color: #FFF !important;
 }
 
@@ -294,7 +263,7 @@ header .el-dropdown-link .el-avatar {
 /* 筛选表单 */
 .search_btn_wrap .search_btn_1 {
   width: 100%;
-  margin-left: 20px !important;
+  margin-left: 100px !important;
 }
 .search_btn_wrap .search_btn_wrap_1,
 .el_form_search_wrap .el-form-item {
@@ -323,9 +292,7 @@ header .el-dropdown-link .el-avatar {
 .el_form_search_wrap .el-form-item .el-form-item__content {
   width: 100%;
 }
-.el-form-item__content .el-button{
-  margin-left: 10px;
-}
+
 .table_wrap .form {
   display: flex;
   padding: 0 !important;
@@ -341,9 +308,8 @@ header .el-dropdown-link .el-avatar {
   width: 50px !important;
   height: 50px !important;
 }
-.el-tabs__content .el-image{
+.table_wrap .el-avatar > img {
   width: 100% !important;
-  height: 100% !important;
 }
 .table_wrap .search_btn_add {
   margin-right: 0 !important;
@@ -377,19 +343,21 @@ header .el-dropdown-link .el-avatar {
 
 /* 表格 */
 .view_a > a {
-  line-height: 32px;
-  padding: 9px 15px !important;
+  line-height: 40px;
+  padding: 8px 15px !important;
   margin: 0 !important;
   margin-right: 10px !important;
+}
+
+.view_a > a.el-button--success.is-plain {
+  margin: 0 !important;
 }
 
 .view_a > a > span {
   white-space: nowrap;
 }
 .view_a > a:last-child {
-  margin-top: 5px !important;
-  display: inline-block;
-  line-height: 1;
+  margin-left: 10px;
 }
 
 /* iframe */
@@ -404,7 +372,7 @@ header .el-dropdown-link .el-avatar {
   margin: 0 10px;
   border: 1px solid rgba(125, 125, 125, 0.25);
   box-shadow: 0 0.25rem 0.5rem 0 rgba(7, 17, 27, 0.1);
-  background: var(--bg2) !important;
+  background: #479d6b !important;
   color: #FFF !important;
 }
 
@@ -416,12 +384,7 @@ header .el-dropdown-link .el-avatar {
   border: 1px solid rgba(125, 125, 125, 0.25) !important;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(7, 17, 27, 0.1) !important;
 }
-.el-submenu.is-opened{
-  border-left: 3px solid;
-  border-image: linear-gradient(to bottom, #404e67, #fe8a7d, #404e67);
-  border-image-slice: 1;
-  transition: border 0.2s;
-}
+
 #outerdiv {
   margin-top: 80px !important;
   overflow: auto !important;
@@ -430,71 +393,28 @@ header .el-dropdown-link .el-avatar {
 #outerdiv iframe {
   border: 1px solid #e5e5e5;
 }
-.edit_wrap .el-form{
-  display: flex;
-  height: 100%;
-  flex-wrap: wrap;
-}
-.edit_wrap.comtable_e .el-form, .edit_wrap.link .el-form{
-  flex-direction: column;
-}
-.edit_wrap.link .el-form .row_e {
-  display: flex;
-  flex-wrap: wrap;
-}
-.edit_wrap.link .el-form .el_form_item_warp{
-  width: 45% !important;
-}
-.edit_wrap .el_form_item_warp.el-col-lg-8{
-  flex-grow: 1;
-  width: 45% !important;
-}
-.edit_wrap .el-form .row_e{
-  flex: 1;
-  overflow: auto;
-}
-.el-form .row_ce{
-  flex: 1;
-  overflow: auto;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-}
-.el-form .row_ce .el_form_item_warp{
-  width: 45% !important;
-  padding: 0;
-}
-.el-form .row_ce .el_form_item_warp .el-upload, .el-form .row_ce .el_form_item_warp .el-upload .el-upload-dragger{
-  width: 100%;
-}
+
 /* 修改密码 */
 .el_form_btn_warp {
   display: flex;
-  justify-content: flex-end;
-  padding-right: 20px;
-  /* box-shadow: 0 -3px 25px -5px #ccc, 0 1px 5px 0 rgba(0,0,0,.1), 0 0 0 0 transparent; */
-  border-top: 1px dotted #e5e5e5;
-  z-index: 1;
-}
-.el_form_btn_warp .el-form-item{
-  margin-bottom: 0;
+  padding-left: 100px;
 }
 .el_form_btn_warp .el-form-item__content {
-  margin: 10px 0 !important;
+  margin-left: 0 !important;
 }
 .el_form_btn_warp .el_form_btn {
   width: auto !important;
 }
 
 /* layout */
-/* .page_root .container-fluid > .el-row:nth-of-type(2) {
+.page_root .container-fluid > .el-row:nth-of-type(2) {
   display: flex !important;
   flex-flow: wrap-reverse !important;
-} */
+}
 
-/* .page_root .container-fluid > .el-row:nth-of-type(2) > .el-col.el-col-8 {
+.page_root .container-fluid > .el-row:nth-of-type(2) > .el-col.el-col-8 {
   width: 100% !important;
-} */
+}
 
 /* reset element ui */
 .el-select-dropdown.el-popper {
@@ -514,35 +434,25 @@ input[type=month],
 input[type=week] {
   border-radius: 0;
 }
-.el-input__inner {}
 
 /* button */
-.el-button, .e-button {
-  border-radius: 100px !important;
+.el-button {
+  border-radius: 0 !important;
   width: auto !important;
   border: none !important;
-  /* outline: 1px solid #fff !important; */
-  /* outline-offset: -3px; */
 }
 .el-button--primary {
-  background-color: #3ae1fa !important;
-  border-color: #3ae1fa !important;
+  background-color: #479d6b !important;
+  border-color: #479d6b !important;
   padding: 12px 20px !important;
 }
-.el-button--danger {
-	background-color: #fb7452 !important;
-	border-color: #fb7452 !important;
-	padding: 12px 20px !important;
-  }
+.el-button--success.is-plain,
 .el-button--default {
-  color:  #34495E !important;
-  background-color: #fff !important;
-  border: 1px solid #34495E !important;
+  color:  #fff !important;
+  background-color: #409eff !important;
+  border-color: #409eff !important;
 }
-.el-button--success{
-	background-color: #58e8cc !important;
-  border-color: #58e8cc !important;
-}
+
 .el-button--success.is-plain,
 .el-button--primary.is-plain {
   color: #FFF !important;
@@ -554,178 +464,6 @@ input[type=week] {
   border-radius: 0 !important;
   padding: 9px 10px !important;
 }
-.el-table{
-  flex: none !important;
-}
-.el-table a {
-  color: var(--color_info) !important;
-}
 .el-table .el-table__cell {
   padding: 5px 0 !important;
-}
-.upload-demo{
-  height: unset;
-}
-#app .page .side {
-  height: 100%;
-}
-#app .page .side::before{
-  content: '后台管理系统';
-  padding: 25px;
-  color: #2cbf9b;
-  width: 100%;
-  text-align: center;
-  background-color: #313441;
-}
-#app .page .side,.el-submenu .el-menu, #app .page .side .el-menu-item, #app .page .side .el-submenu__title{
-	background-color: #12c294 !important;
-}
-#app .page .side .el-menu-item:hover, #app .page .side .el-submenu__title:hover{
-	/* background: linear-gradient(to right, #12c294 20%, #199277 ) !important; */
-  background-image: linear-gradient(to right,#0df3a3 0%,#07885b 51%,#0df3a3 100%);
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-}
-.el-menu-item:hover, li.el-menu-item.is-active, .el-menu-item.is-active span {
-	color: var(--bg1) !important;
-}
-#app .page .side .el-menu-item {
-  /* transition: margin 0.5s ease; */
-}
-#app .page .side .el-menu-item.is-active {
-  /* background: linear-gradient(to right, #12c294 20%, #199277 ) !important; */
-  background-image: linear-gradient(to right,#0df3a3 0%,#07885b 51%,#0df3a3 100%);
-  background-size: 200% auto;
-}
-#app .page .side .el-menu-item.is-active::after {
-  bottom: -13px;
-  right: 0;
-}
-.active{
-	color: var(--bg1) !important;
-}
-#app .page header .warp{
-	/* background: #fff; */
-  background-image: linear-gradient(to right,#546686 0%,#313441 51%,#546686 100%);
-}
-.login_conter .warp .el-col-24 .el-form {
-  position: relative;
-  padding-left: 400px !important;
-  max-width: 700px !important;
-  background: linear-gradient(to right, transparent 50%, #fff 50%);
-}
-
-.login_conter .warp .el-col-24 .el-form .el-form-item, .login_conter .warp .el-col-24 .el-form .geetest_box{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-.login_conter .warp .el-col-24 .el-form .btns{
-  margin-top: 10px;
-}
-.login_conter .warp .el-col-24 .el-form .el-form-item__content{
-  margin-left: 0 !important;
-}
-.login_conter .warp .el-col-24 .el-form::before{
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 400px;
-  left: 0px;
-  top: 0;
-}
-.sign_in.register_wrap .el-col-24 .el-form h1{
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #70a9df;
-}
-.sign_in.register_wrap .form .el-button{
-  width: 250px !important;
-  margin: 20px 0 0 0 !important;
-  position: relative;
-  right: 50%;
-  transform: translateX(50%);
-}
-#app .page .warp .el-breadcrumb__item span, #app .page .warp .el-dropdown span, #app .page .warp .action_right .timess, .action_center{
-	color: #fff !important;
-}
-#app .page .warp .el-col{
-	display: flex;
-	align-items: center;
-}
-#app .page .warp .el-icon-menu, #app .page .warp .el-icon-s-grid{
-	color: var(--bg1);
-}
-#app .page .warp .action_right{
-	height: 100%;
-	display: flex;
-	align-items: center;
-}
-#app .page .warp .action_right .timess{
-
-}
-#app .page .warp .el-avatar{
-	border-radius: 8px !important;
-	width: 30px !important;
-	height: 30px !important;
-}
-.el-col.el-col-8:first-child{
-	width: 100%;
-}
-.el-col.el-col-8{
-	width: 50%;
-}
-.el-dropdown-selfdefine{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding-top: 3px;
-}
-.action_left{
-	flex: 1;
-}
-/* .log_box{
-  background: #fff;
-  padding: 10px;
-  border: 1px solid #ccc;
-} */
-.row1{
-  flex: 1;
-}
-.row1 .el_form_search_wrap.el-col{
-  margin-right: 10px;
-  width: calc((100% - 30px) / 3) !important;
-}
-.row1 .el-form-item__label{
-  white-space: nowrap;
-}
-
-#app .page .side .el-menu-item .el-icon-s-home:before{
-  content: "\e7bd";
-}
-#app .page .side .el-submenu__title .el-icon-s-custom:before{
-  content: "\e7a5";
-}
-#app .page .side .el-submenu__title .el-icon-news:before{
-  content: "\e7b1";
-}
-#app .page .side .el-submenu__title .el-icon-picture-outline:before{
-  content: "\e7a8";
-}
-#app .page .side .el-submenu__title .el-icon-warning-outline:before{
-  content: "\e7a1";
-}
-#app .page .side .el-submenu__title .el-icon-s-opportunity:before{
-  content: "\e7b0";
-}
-#app .page .side .el-submenu__title .el-icon-chat-line-round:before{
-  content: "\e7ba";
-}
-#app .page .side .el-submenu__title .el-icon-shopping-cart-2:before{
-  content: "\e7b4";
-}
-.el-submenu [class^=el-icon-], .el-menu-item [class^=el-icon-]{
-  color: #fff !important;
 }
