--- a/admin-template/public/css/diy.css
+++ b/admin-template/public/css/diy.css
@@ -3,38 +3,85 @@ html, body, #app, .page, .sign_in,
 html, body, #app, .page, .sign_in .warp,
 html, body, #app, .page, .sign_in .warp .el-row,
 html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24,
-html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
+html, body, #app, .page {
   height: 100%;
+  --bg1: #fff;
+  --bg2: #9fe080;
+  --textColor1: #12c294;
+  --textColor2: #3f85ff;
+  --menuColor: #4c4e5a;
+  --menuBgColor: #f5f7fe;
+}
+.el-submenu [class^=el-icon-], .el-menu-item [class^=el-icon-]{
+  color: var(--menuColor) !important;
+  font-size: 20px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgba(144,147,153,.3) !important;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: rgba(144,147,153,.5) !important;
+}
+#app{ 
+	background-color: #f2f7fa;
 }
 .form .el-input,
 .form .el-select {
   width: 100% !important;
 }
-
+.page{
+  /* background-color: #12c294; */
+}
+.page main {
+  display: flex;
+  flex-direction: column;
+  /* margin: 15px; */
+  margin-left: 0;
+  /* border-radius: 15px; */
+  background-color: #f3f5fd;
+}
+.page .el-main{
+  background: #fff;
+}
+.page main article {
+  margin: 15px 15px 15px 0;
+  border-radius: 15px;
+  background: #fff;
+}
+.page main .action_left .breadcrumb_box .el-breadcrumb__item span.el-breadcrumb__inner {
+  color: #fff !important;
+}
+.el-main{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 /* 登录 */
 .sign_in {
   padding: 0 !important;
 }
-.sign_in h1 {
+.sign_in.login_conter h1 {
   font-size: 22px;
-  color: #234d52;
+  color: #fff;
   padding-bottom: 10px;
+  position: absolute;
+  width: 200px;
+  left: 75px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .sign_in .form {
-  padding: 15% 20px 20px !important;
-  background-color: rgba(255, 255, 255, .3);
-  margin-top: 0 !important;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  overflow: unset !important;
-  margin: 0 !important;
-  border-radius: 0 !important;
+  padding: 40px !important;
+  background: #fffdfd;
+  margin-top: auto !important;
 }
-
+.sign_in .form label.el-form-item__label{
+  color: #12c294 !important;
+}
 .register_wrap .form {
-  padding-top: 100px !important;
+  max-height: 55vh;
+  overflow: scroll !important;
+  border-radius: 0 !important;
 }
 
 .sign_in .form .el-input__inner {
@@ -57,16 +104,15 @@ html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
   text-align: center;
 }
 .sign_in .form .btns .el-button {
-  width: 80px !important;
-  float: none;
-}
-.sign_in .form .btns .lg_login {
-  margin-left: 90px;
+  width: 100% !important;
+  margin: 0 0 10px 0 !important;  
 }
 .sign_in .form .btns .lg_forgot {
+  outline: none !important;
   background: none !important;
   border: none !important;
-  color: #fff;
+  color: #12c294 !important;
+  text-decoration: underline;
   /* display: block; */
   padding: 0;
   text-shadow: 0 1px 1px hsla(240, 0%, 100%, .5);
@@ -77,8 +123,10 @@ html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
   width: 100% !important;
 }
 .geetest_box .geetest_box_title {
+  margin-right: 12px !important;
+  flex-shrink: 0;
   line-height: 40px;
-  color: #fff;
+  color: #12c294;
   text-shadow: 0 1px 1px hsla(240, 0%, 100%, .5);
 }
 .geetest_box_content .el-input {
@@ -94,8 +142,8 @@ html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
 /* 人脸识别 */
 .face-login {
   position: absolute;
-  top: 0;
-  right: 521px;
+  top: calc(50% - 240px);
+  left: calc(50% + 360px);
   background: #fff;
   padding: 10px 0px;
   text-align: center;
@@ -139,13 +187,13 @@ html, body, #app, .page, .sign_in .warp .el-row .el-col.el-col-24 .form {
 }
 .sign_in .form .rs_register {
   margin-left: 15px;
-  margin-right: 150px;
+  margin-right: 30px;
 }
 
 /* header */
 header {
-  background: #479d6b !important;
-  color: #fbfbfb !important;
+  /* background: #479d6b !important; */
+  color: var(--textColor2) !important;
 }
 
 header .action_center {
@@ -167,11 +215,11 @@ header .el-dropdown-link span:first-child {
   height: 40px;
 }
 header .el-dropdown-link span:first-child img {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 header .el-dropdown-link span:last-child {
-  color: #fbfbfb;
+  color: var(--textColor1);
   position: relative;
   margin: 0 !important;
   top: 0 !important;
@@ -186,8 +234,8 @@ header .el-dropdown-link span:last-child::after {
   align-items: center;
   justify-content: center;
   position: absolute;
-  border-top: 2px solid #fbfbfb;
-  border-right: 2px solid #fbfbfb;
+  border-top: 2px solid var(--menuColor);
+  border-right: 2px solid var(--menuColor);
   transform: rotate(135deg);
   transition: all 0.5s ease 0s;
   right: -10px;
@@ -198,7 +246,7 @@ header .el-dropdown-link:hover span:last-child::after {
   top: 8px;
 }
 header .el-dropdown-link .el-avatar {
-  display: none !important;
+  /* display: none !important; */
 }
 
 /* 面包屑 */
@@ -209,14 +257,14 @@ header .el-dropdown-link .el-avatar {
   color: #FFF !important;
 }
 .el-breadcrumb__item:last-child .el-breadcrumb__inner span {
-  color: #fbfbfb !important;
+  color: var(--textColor1) !important;
 }
 
 /* side 菜单 */
 .side {
-  background: #479d6b !important;
+  border-right: none !important;
 }
-.side::before {
+/* .side::before {
   content: "";
   display: block;
   width: 100px;
@@ -227,48 +275,46 @@ header .el-dropdown-link .el-avatar {
   background-size: cover;
   box-shadow: 0 0 5px rgba(0, 0, 0, .5);
   border: 4px solid #479d6b;
-}
+} */
 .side li.el-submenu,
 .side li.is-active,
 .side > .el-menu-item,
 .side li.el-submenu .el-submenu__title {
-  background-color: #fbfbfb !important;
-  color: #304156 !important;
+  background-color: var(--menuBgColor) !important;
+  color: var(--menuColor)!important;
 }
 .side li.el-submenu li.el-menu-item {
   background-color: #f5f5f5 !important;
-  color: #1f2d3d !important;
+  color: var(--menuColor)!important;
 }
 
 .side li.is-active,
-.side li.el-submenu li.el-menu-item.active,
 .side li.el-submenu li.el-menu-item.is-active {
-  color: #479d6b !important;
-}
-
-.side li.el-submenu li.el-menu-item.sactive {
-  color: #304156 !important;
-  background: #fbfbfb !important;
+  /* color: #479d6b !important; */
 }
 
 .side li.is-opened .el-submenu__title {
-  background-color: #479d6b !important;
-  color: #FFF !important;
+  /* background-color: #479d6b !important; */
+  color: var(--menuColor)!important;
 }
 
 .side li.is-opened .el-submenu__title i {
-  color: #FFF !important;
+  color: var(--menuColor)!important;
 }
 
 /* 筛选表单 */
 .search_btn_wrap .search_btn_1 {
   width: 100%;
-  margin-left: 100px !important;
+  text-align: right;
+  /* margin-left: 20px !important; */
 }
 .search_btn_wrap .search_btn_wrap_1,
 .el_form_search_wrap .el-form-item {
   display: flex;
   justify-content: flex-start;
+}
+.search_btn_wrap .search_btn_wrap_1{
+  justify-content: flex-endz;
 }
 .search_btn_wrap .search_btn_wrap_1 .search_btn_reset,
 .search_btn_wrap .search_btn_1 .derive,
@@ -292,13 +338,26 @@ header .el-dropdown-link .el-avatar {
 .el_form_search_wrap .el-form-item .el-form-item__content {
   width: 100%;
 }
-
+.el-form-item__content .el-button{
+  margin-left: 10px;
+}
 .table_wrap .form {
   display: flex;
   padding: 0 !important;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 .table_wrap .form .row1 {
-  width: 380px !important;
+  /* width: 380px !important; */
+}
+.table_wrap .mt.text_center{
+  text-align: right;
+}
+.table_wrap .el-table{
+  border: 1px solid var(--textColor2);
+}
+.el-pager li.active, .el-pager li:hover, .el-pagination button:hover {
+  color: var(--textColor2) !important;
 }
 .table_wrap .form .el-col-lg-8 {
   width: 100% !important;
@@ -308,8 +367,9 @@ header .el-dropdown-link .el-avatar {
   width: 50px !important;
   height: 50px !important;
 }
-.table_wrap .el-avatar > img {
+.el-tabs__content .el-image{
   width: 100% !important;
+  height: 100% !important;
 }
 .table_wrap .search_btn_add {
   margin-right: 0 !important;
@@ -343,21 +403,19 @@ header .el-dropdown-link .el-avatar {
 
 /* 表格 */
 .view_a > a {
-  line-height: 40px;
-  padding: 8px 15px !important;
+  line-height: 32px;
+  padding: 9px 15px !important;
   margin: 0 !important;
   margin-right: 10px !important;
-}
-
-.view_a > a.el-button--success.is-plain {
-  margin: 0 !important;
 }
 
 .view_a > a > span {
   white-space: nowrap;
 }
 .view_a > a:last-child {
-  margin-left: 10px;
+  margin-top: 5px !important;
+  display: inline-block;
+  line-height: 1;
 }
 
 /* iframe */
@@ -372,10 +430,12 @@ header .el-dropdown-link .el-avatar {
   margin: 0 10px;
   border: 1px solid rgba(125, 125, 125, 0.25);
   box-shadow: 0 0.25rem 0.5rem 0 rgba(7, 17, 27, 0.1);
-  background: #479d6b !important;
+  background: var(--bg2) !important;
   color: #FFF !important;
 }
-
+.container-fluid .iframe_box{
+  margin-top: 80px !important;
+}
 .iframe_box > div:last-child,
 .iframe_box_change > iframe,
 #outerdiv {
@@ -384,7 +444,12 @@ header .el-dropdown-link .el-avatar {
   border: 1px solid rgba(125, 125, 125, 0.25) !important;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(7, 17, 27, 0.1) !important;
 }
-
+.el-submenu.is-opened{
+  /* border-left: 3px solid;
+  border-image: linear-gradient(to bottom, #404e67, #fe8a7d, #404e67); */
+  border-image-slice: 1;
+  transition: border 0.2s;
+}
 #outerdiv {
   margin-top: 80px !important;
   overflow: auto !important;
@@ -393,28 +458,71 @@ header .el-dropdown-link .el-avatar {
 #outerdiv iframe {
   border: 1px solid #e5e5e5;
 }
-
+.edit_wrap .el-form{
+  display: flex;
+  height: 100%;
+  flex-wrap: wrap;
+}
+.edit_wrap.comtable_e .el-form, .edit_wrap.link .el-form, .edit_wrap.slides .el-form{
+  flex-direction: column;
+}
+.edit_wrap.link .el-form .row_e {
+  display: flex;
+  flex-wrap: wrap;
+}
+.edit_wrap.link .el-form .el_form_item_warp{
+  width: 45% !important;
+}
+.edit_wrap .el_form_item_warp.el-col-lg-8{
+  flex-grow: 1;
+  width: 45% !important;
+}
+.edit_wrap .el-form .row_e{
+  flex: 1;
+  overflow: auto;
+}
+.el-form .row_ce{
+  flex: 1;
+  overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+.el-form .row_ce .el_form_item_warp{
+  width: 45% !important;
+  padding: 0;
+}
+.el-form .row_ce .el_form_item_warp .el-upload, .el-form .row_ce .el_form_item_warp .el-upload .el-upload-dragger{
+  width: 100%;
+}
 /* 修改密码 */
 .el_form_btn_warp {
   display: flex;
-  padding-left: 100px;
+  justify-content: flex-end;
+  padding-right: 20px;
+  /* box-shadow: 0 -3px 25px -5px #ccc, 0 1px 5px 0 rgba(0,0,0,.1), 0 0 0 0 transparent; */
+  border-top: 1px dotted #e5e5e5;
+  z-index: 1;
+}
+.el_form_btn_warp .el-form-item{
+  margin-bottom: 0;
 }
 .el_form_btn_warp .el-form-item__content {
-  margin-left: 0 !important;
+  margin: 10px 0 !important;
 }
 .el_form_btn_warp .el_form_btn {
   width: auto !important;
 }
 
 /* layout */
-.page_root .container-fluid > .el-row:nth-of-type(2) {
+/* .page_root .container-fluid > .el-row:nth-of-type(2) {
   display: flex !important;
   flex-flow: wrap-reverse !important;
-}
+} */
 
-.page_root .container-fluid > .el-row:nth-of-type(2) > .el-col.el-col-8 {
+/* .page_root .container-fluid > .el-row:nth-of-type(2) > .el-col.el-col-8 {
   width: 100% !important;
-}
+} */
 
 /* reset element ui */
 .el-select-dropdown.el-popper {
@@ -434,25 +542,35 @@ input[type=month],
 input[type=week] {
   border-radius: 0;
 }
+.el-input__inner {}
 
 /* button */
-.el-button {
-  border-radius: 0 !important;
+.el-button, .e-button {
+  border-radius: 100px !important;
   width: auto !important;
   border: none !important;
+  /* outline: 1px solid #fff !important; */
+  /* outline-offset: -3px; */
 }
 .el-button--primary {
-  background-color: #479d6b !important;
-  border-color: #479d6b !important;
+  background-color: #3ae1fa !important;
+  border-color: #3ae1fa !important;
   padding: 12px 20px !important;
 }
-.el-button--success.is-plain,
+.el-button--danger {
+	background-color: #fb7452 !important;
+	border-color: #fb7452 !important;
+	padding: 12px 20px !important;
+  }
 .el-button--default {
-  color:  #fff !important;
-  background-color: #409eff !important;
-  border-color: #409eff !important;
+  color:  #34495E !important;
+  background-color: #fff !important;
+  border: 1px solid #34495E !important;
 }
-
+.el-button--success{
+	background-color: #58e8cc !important;
+  border-color: #58e8cc !important;
+}
 .el-button--success.is-plain,
 .el-button--primary.is-plain {
   color: #FFF !important;
@@ -464,6 +582,212 @@ input[type=week] {
   border-radius: 0 !important;
   padding: 9px 10px !important;
 }
+.el-table{
+  flex: none !important;
+}
+.el-table a {
+  color: var(--color_info) !important;
+}
 .el-table .el-table__cell {
   padding: 5px 0 !important;
+}
+.upload-demo{
+  height: unset;
+}
+#app .page .side {
+  height: 100%;
+}
+#app .page .side::before{
+  content: "\e7bd";
+  font-family: element-icons!important;
+  font-size: 41px;
+  color: #3f85ff;
+  width: 100%;
+  text-align: center;
+  background-color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 111;
+  margin-bottom: 25px;
+}
+#app .page .side, #app .page .side .el-submenu__title{
+	background-color: var(--menuBgColor) !important;
+}
+#app .page .side .el-submenu__title {
+  margin: 0 0 0 15px;
+}
+#app .page .side .el-menu--inline{
+  background-color: var(--menuBgColor) !important;
+}
+#app .page .side .el-menu-item{
+  background-color: inherit !important;
+   margin: 0 0 0 15px;
+}
+#app .page .side .el-menu-item:hover, #app .page .side .el-submenu__title:hover{
+ 
+  border-bottom-left-radius: 5px;
+  /* padding-left: 25px !important; */
+  border-top-left-radius: 5px;
+	background: #fff !important;
+  color: var(--textColor2) !important;
+}
+#app .page .side .el-menu-item:hover, #app .page .side .el-submenu__title:hover  [class^=el-icon-]{
+  color: var(--textColor2) !important;
+}
+.el-menu-item:hover, li.el-menu-item.is-active,
+.el-menu-item.is-active span,
+.el-menu-item.is-active .el-submenu [class^=el-icon-],
+.el-menu-item.is-active [class^=el-icon-],
+.el-menu-item:hover .el-submenu [class^=el-icon-],
+.el-menu-item:hover [class^=el-icon-] {
+	color: var(--textColor2) !important;
+  font-weight: 700;
+}
+
+#app .page .side .el-menu-item {
+  /* transition: margin 0.5s ease; */
+}
+#app .page .side .el-menu-item.is-active {
+  background-color: #fff !important;
+  margin: 0 0 0 15px;
+  border-bottom-left-radius: 5px;
+  /* padding-left: 25px !important; */
+  border-top-left-radius: 5px;
+}
+#app .page .side .el-menu-item.is-active::after {
+  bottom: -13px;
+  right: 0;
+}
+.active{
+	color: var(--bg1) !important;
+}
+#app .page header .warp{
+	background: #fff;
+}
+.login_conter .warp .el-col-24 .el-form {
+  position: relative;
+  padding-left: 400px !important;
+  max-width: 700px !important;
+  /* background: linear-gradient(to right, transparent 50%, #fff 50%); */
+  background: linear-gradient(to right, transparent , #4677bb );
+}
+
+.login_conter .warp .el-col-24 .el-form .el-form-item, .login_conter .warp .el-col-24 .el-form .geetest_box{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.login_conter .warp .el-col-24 .el-form .btns{
+  margin-top: 10px;
+}
+.login_conter .warp .el-col-24 .el-form .el-form-item__content{
+  margin-left: 0 !important;
+}
+.login_conter .warp .el-col-24 .el-form::before{
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 400px;
+  left: 0px;
+  top: 0;
+}
+.sign_in.register_wrap h1, .sign_in.forgot_wrap h1{
+  color: #12c294 !important;
+  padding-bottom: 20px;
+}
+.sign_in.register_wrap .form .el-button{
+  width: 250px !important;
+  margin: 20px 0 0 0 !important;
+  position: relative;
+  right: 50%;
+  transform: translateX(50%);
+}
+#app .page .warp .el-breadcrumb__item span, #app .page .warp .el-dropdown span, #app .page .warp .action_right .timess, .action_center{
+	color: #353748 !important;
+}
+#app .page .warp .el-col{
+	display: flex;
+	align-items: center;
+}
+#app .page .warp .el-icon-menu, #app .page .warp .el-icon-s-grid{
+	color: var(--menuColor);
+}
+#app .page .warp .action_right{
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+#app .page .warp .action_right .timess{
+
+}
+#app .page .warp .el-avatar{
+	border-radius: 8px !important;
+	width: 30px !important;
+	height: 30px !important;
+}
+/* .container-fluid .el-col.el-col-8:first-child{
+	width: 100%;
+} */
+.el-col.el-col-8{
+	width: 50%;
+}
+.container-fluid {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.container-fluid .el-row {
+  margin-top: 40px;
+}
+.el-dropdown-selfdefine{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding-top: 3px;
+}
+.action_left{
+	flex: 1;
+}
+/* .log_box{
+  background: #fff;
+  padding: 10px;
+  border: 1px solid #ccc;
+} */
+.row1{
+  /* flex: 1; */ 
+  width: unset !important;
+}
+
+.row1 .el_form_search_wrap.el-col{
+  margin-right: 10px;
+  /* width: calc((100% - 30px) / 2) !important; */
+  width: 250px !important;
+}
+.row1 .el-form-item__label{
+  white-space: nowrap;
+}
+
+#app .page .side .el-menu-item .el-icon-s-home:before{
+  content: "\e767";
+}
+#app .page .side .el-submenu__title .el-icon-s-custom:before{
+  content: "\e6e3";
+}
+#app .page .side .el-submenu__title .el-icon-news:before{
+  content: "\e72a";
+}
+#app .page .side .el-submenu__title .el-icon-picture-outline:before{
+  content: "\e77f";
+}
+#app .page .side .el-submenu__title .el-icon-warning-outline:before{
+  content: "\e76a";
+}
+#app .page .side .el-submenu__title .el-icon-s-opportunity:before{
+  content: "\e76e";
+}
+#app .page .side .el-submenu__title .el-icon-chat-line-round:before{
+  content: "\e76f";
+}
+#app .page .side .el-submenu__title .el-icon-shopping-cart-2:before{
+  content: "\e7b4";
 }
